--- a/index.html
+++ b/index.html
@@ -4,18 +4,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Arduino - Electrónica y Programación</title>
-  <link rel="stylesheet" href="estilos.css">
+  <link rel="stylesheet" href="estilos2.css">
 </head>
 <body>
   <header>
     <div class="logo">
-        <img src="https://th.bing.com/th/id/R.847f9ebf5c384197d3cc744044d3b37a?rik=EVHf5TJqKlnE8w&pid=ImgRaw&r=0" alt="Logo Arduino" width="80">
-      <svg width="80" height="40" viewBox="0 0 200 100">
-        <ellipse cx="60" cy="50" rx="50" ry="30" fill="#00979D"/>
-        <ellipse cx="140" cy="50" rx="50" ry="30" fill="#00979D"/>
-        <rect x="95" y="45" width="10" height="10" fill="white"/>
-      </svg>
+      <img src="https://tse2.mm.bing.net/th/id/OIP.c485nbA1b90GOju9eQrEBAHaHa?rs=1&pid=ImgDetMain&o=7&rm=3" alt="Logo Arduino" height="50">
       <h1>Arduino World</h1>
+
     </div>
     <nav>
       <ul>
@@ -32,19 +28,19 @@
     <section id="placas">
       <h2>Placas Arduino</h2>
       <p>Las placas Arduino son el corazón del sistema. Las más comunes son: Arduino UNO, Mega, Nano y Leonardo.</p>
-      <img src="https://upload.wikimedia.org/wikipedia/commons/3/38/Arduino_Uno_-_R3.jpg" width="250" alt="Arduino UNO">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/3/38/Arduino_Uno_-_R3.jpg" alt="Arduino UNO">
     </section>
 
     <section id="sensores">
       <h2>Sensores</h2>
       <p>Existen múltiples sensores compatibles con Arduino: temperatura, humedad, ultrasonido, movimiento, entre otros.</p>
-      <img src="https://cdtechnologia.net/9759-large_default/sensor-de-distancia-ultrasonico-hysrf05.jpg" width="250" alt="Sensor ultrasonido">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/3/3f/HC-SR04_Sonar.jpg" alt="Sensor ultrasonido">
     </section>
 
     <section id="alimentacion">
       <h2>Alimentación</h2>
       <p>Arduino puede alimentarse por USB (5V), pilas, baterías de litio o fuentes externas de hasta 12V.</p>
-      <img src="https://www.arduino.cc/en/uploads/Main/ArduinoUno_R3_Front_450px.jpg" width="250" alt="Alimentación Arduino">
+      <img src="https://www.arduino.cc/en/uploads/Main/ArduinoUno_R3_Front_450px.jpg" alt="Alimentación Arduino">
     </section>
 
     <section id="programacion">
@@ -76,6 +72,5 @@ void loop() {
     <p>© 2025 Arduino World - Página educativa</p>
   </footer>
 
-  <script src="script.js"></script>
 </body>
 </html>
