--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Arduino - Electrónica y Programación</title>
-  <link rel="stylesheet" href="estilos2.css">
+  <link rel="stylesheet" href="estilos.css">
 </head>
 <body>
   <header>
@@ -74,3 +74,4 @@ void loop() {
 
 </body>
 </html>
+
