--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Arduino - Electrónica y Programación</title>
-  <link rel="stylesheet" href="estilos.css">
+  <link rel="stylesheet" href="estilos2.css">
 </head>
 <body>
   <header>
@@ -60,18 +60,18 @@ void loop() {
 }
       </code></pre>
     </section>
-
     <section id="ejemplos">
-      <h2>Ejemplos Interactivos</h2>
-      <button id="ledBtn">Encender LED Virtual</button>
-      <div id="led"></div>
-    </section>
+  <h2>Ejemplo Interactivo: LED Virtual</h2>
+  <p>Haz clic en el botón para encender y apagar el LED, igual que en Arduino.</p>
+  <button id="ledBtn">Encender LED Virtual</button>
+  <div id="led"></div>
+</section>
   </main>
 
   <footer>
     <p>© 2025 Arduino World - Página educativa</p>
   </footer>
+  <script src="script.js"></script>
 
 </body>
 </html>
-
